fix spacing on batch message send button [touch: 5725]

--- a/caffeinated/admin/extend/registrations/assets/ee-newsletter-trigger.css
+++ b/caffeinated/admin/extend/registrations/assets/ee-newsletter-trigger.css
@@ -29,3 +29,7 @@
 	border-radius: 4px;
 
 }
+
+#selected-batch-send-trigger {
+	margin-left: 10px;
+}
